Fix overflow style

--- a/src/routes/IndexPage.less
+++ b/src/routes/IndexPage.less
@@ -40,7 +40,7 @@
 }
 
 .content {
-  overflow: visible;
+  overflow: visible !important;
 }
 
 @media only screen and (max-width: 1024px) {
